--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,11 @@
                     <h1>WatchQueue</h1>
                 </div>
                 <p class="tagline">Decide what to watch together</p>
+                <div class="auth-controls">
+                    <div id="google-signin-btn"></div>
+                    <button id="logout-btn" class="btn btn-ghost" style="display:none;">Log out</button>
+                </div>
+                <p id="auth-user-label" class="subtle"></p>
 
                 <div class="landing-actions">
                     <div class="action-card" id="create-room-card">
@@ -33,6 +38,13 @@
                         <p>Enter with a code</p>
                     </div>
                 </div>
+
+                <section class="saved-rooms-section">
+                    <h3>Your Rooms</h3>
+                    <div id="saved-rooms-list" class="saved-rooms-list">
+                        <p class="subtle">No saved rooms yet</p>
+                    </div>
+                </section>
             </div>
         </div>
 
@@ -100,11 +112,27 @@
             </div>
         </div>
 
+        <!-- Join Name Conflict Modal -->
+        <div id="name-conflict-modal" class="modal">
+            <div class="modal-content modal-content-sm">
+                <button class="modal-close" id="name-conflict-close">&times;</button>
+                <h3>Name Already Set</h3>
+                <p id="name-conflict-text" class="name-conflict-text"></p>
+                <div class="name-conflict-actions">
+                    <button class="btn btn-primary" id="name-conflict-change-btn">Change Name</button>
+                    <button class="btn btn-ghost" id="name-conflict-keep-btn">Keep Old Name</button>
+                </div>
+            </div>
+        </div>
+
         <!-- Room Screen -->
         <div id="room-screen" class="screen">
             <header class="room-header">
                 <div class="room-info">
-                    <h1 id="room-title">Movie Night</h1>
+                    <div class="room-title-row">
+                        <h1 id="room-title">Movie Night</h1>
+                        <div id="role-badge" class="role-badge"></div>
+                    </div>
                     <div class="room-code-display">
                         Code: <span id="display-room-code">ABC123</span>
                         <button class="copy-btn" id="copy-code-btn" title="Copy code">📋</button>
@@ -113,7 +141,11 @@
                 <div class="room-members" id="room-members">
                     <!-- Members will be inserted here -->
                 </div>
-                <button class="btn btn-ghost" id="leave-room-btn">Leave</button>
+                <div class="room-actions">
+                    <button class="btn btn-ghost" id="share-admin-btn" style="display: none;">Share Admin</button>
+                    <button class="btn btn-danger" id="delete-room-btn" style="display: none;">Delete Room</button>
+                    <button class="btn btn-ghost" id="leave-room-btn">Home</button>
+                </div>
             </header>
 
             <main class="room-main">
@@ -134,6 +166,15 @@
                 <section class="queue-section">
                     <div class="section-header">
                         <h2>Queue</h2>
+                        <div class="queue-filters">
+                            <select id="provider-filter">
+                                <option value="">All providers</option>
+                            </select>
+                            <label class="availability-toggle">
+                                <input type="checkbox" id="available-only-toggle">
+                                Available now
+                            </label>
+                        </div>
                         <div class="selection-controls">
                             <select id="selection-mode">
                                 <option value="weighted_random">Weighted Random</option>
@@ -171,8 +212,9 @@
                                 </div>
                             </div>
                             <div class="selection-actions">
+                                <a class="btn btn-accent" id="play-now-link" target="_blank" rel="noopener noreferrer" style="display: none;">Play Now</a>
                                 <button class="btn btn-primary" id="start-watching-btn">Start Watching</button>
-                                <button class="btn btn-ghost" id="close-selection-btn">Pick Again</button>
+                                <button class="btn btn-ghost" id="close-selection-btn">Back to Queue</button>
                             </div>
                         </div>
                     </div>
@@ -196,8 +238,10 @@
 
         <!-- Toast Container -->
         <div id="toast-container"></div>
+        <div id="activity-toast-container"></div>
     </div>
 
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="/static/app.js"></script>
 </body>
 </html>
